<resources>
    <string name="app_name">GPS Tasks</string>
    <string name="action_settings">Settings</string>
    <string name="addbutton">Add New</string>
    <string name="deletebutton">Delete</string>
    <string name="donebutton">Done</string>
    <string name="tasknamefiller">New Task</string>
    <string name="taskmenutitle">Tasks</string>
    <string name="configuretask">Configure Task</string>
    <string name="configureaction">Configure Action</string>
    <string name="title_activity_configure_task_location">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trigger_text">Triggers</string>
    <string name="action_text">Actions</string>
    <string name="entered_area_text">Entered Area</string>
    <string name="sms_text">Send SMS</string>
    <string name="play_music">Play Music</string>
</resources>
