<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddTask" android:id="@+id/root_layout">
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
                android:text="@string/tasknamefiller"/>

        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
            android:hint="Task Name"
            android:id="@+id/mtaskNameTxt"/>

    <android.support.v7.widget.RecyclerView
            android:layout_width="368dp"
            android:layout_height="350dp"
            android:layout_marginBottom="9dp" app:layout_constraintBottom_toTopOf="@+id/mAddButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/mTaskBuilderRecyclerView"/>

    </LinearLayout>

    <Button
            android:text="@string/addbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:id="@+id/mAddButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="84dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"/>
    <Button
            android:text="@string/donebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" android:layout_marginEnd="84dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:onClick="finishTaskBuilder" android:background="@drawable/button"/>
</android.support.constraint.ConstraintLayout>